@@ -10,19 +10,37 @@ repositories {
 
 subprojects {
     apply {
+        plugin("java")
         plugin("java-library")
     }
 
-    group = "fr.euphyllia.fidorial"
-    version = "0.1.0-SNAPSHOT"
+    group = "fr.fidorial"
 
     repositories {
         mavenCentral()
         maven("https://libraries.minecraft.net")
-        maven {
-            name = "faststatsReleases"
-            url = uri("https://repo.faststats.dev/releases")
-        }
+    }
+
+    fun readUnnamedModules(): Iterable<String> {
+        val property = extensions.extraProperties.get("readUnnamedModules")
+        return (property as Iterable<*>).map { it.toString() }
+    }
+
+    tasks.withType<JavaCompile>().configureEach {
+        readUnnamedModules().forEach { options.compilerArgs.addAll(listOf("--add-reads", "$it=ALL-UNNAMED")) }
+    }
+
+    tasks.withType<Test>().configureEach {
+        readUnnamedModules().forEach { jvmArgs("--add-reads", "$it=ALL-UNNAMED") }
+    }
+
+    tasks.withType<JavaExec>().configureEach {
+        readUnnamedModules().forEach { jvmArgs("--add-reads", "$it=ALL-UNNAMED") }
+    }
+
+    tasks.javadoc {
+        val options = options as StandardJavadocDocletOptions
+        readUnnamedModules().forEach { options.addStringOption("-add-reads", "$it=ALL-UNNAMED") }
     }
 
     extensions.configure<JavaPluginExtension> {
